--- a/app/views/errors/index.html.erb
+++ b/app/views/errors/index.html.erb
@@ -2,7 +2,7 @@
   ActiveRabbit Errors
 <% end %>
 
-<!-- Errors List / Graph Toggle -->
+<!-- Errors List / Analytics Toggle -->
 <div class="bg-white rounded-xl shadow overflow-hidden border border-gray-200">
     <% if params[:tab] == 'graph' %>
       <div class="border-t border-gray-200 px-6 py-6">
